# CEBRA-lens

./: .buildinfo  .gitignore  CONDUCT.html  CONTRIBUTING.html  Makefile  README.html  README.md  _config.yml  _toc.yml  genindex.html  gitignore.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  test_unified.ipynb
.github/workflows/: publish-book.yml  pypi-release.yml  python-package.yml
Notebooks/: AnalysisVISUAL.ipynb  AnalysisVISUALtest.ipynb  Demo-Notebook-Allen.ipynb  ModelGeneratorHPC.ipynb  ModelGeneratorVISUAL.ipynb  decodingacrosslayerVISUAL.ipynb  noise_testVISUAL.ipynb
_modules/: index.html
_sources/: CONTRIBUTING.md  README.md
cebra_lens/: __init__.py  activations.py  lens.py  matplotlib.py  model.py  plotting.py  transform.py  tsne.py  utils.py  utils_allen.py  utils_hpc.py  utils_plot.py  utils_wrapper.py
demos/: Demo-Notebook-Allen.ipynb  ModelGeneratorVISUAL.ipynb  UsageDemo.ipynb  UsageDemoGENERAL.html  UsageDemoVISUAL.html  demo-development.ipynb  demo_development.ipynb  metric_template.py
docs/: CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  README.html  README.md  _config.yml  _toc.yml  content.html  initial_pitch.html  installation.html  intro.html  markdown-notebooks.html  markdown.html  metrics.html  notebooks.html  package_intro.html  repo_org.html
scripts/: layer_activation_retrieval.py  model_decoding.py  tSNE_visualization.py
src/: Image2DINO.ipynb
tests/: test_activations.py  test_cka.py  test_decoding.py  test_misc.py  test_model_loader.py  test_rdm.py  test_utils.py
(+143 files in other folders)
